<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box_bg"
    android:orientation="vertical">

    <!--<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/change_password_tollbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_16"
        android:visibility="invisible"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="8dp"
        android:text="@string/txt_change_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_size_5"
        android:layout_marginLeft="@dimen/text_size_10"
        android:layout_marginRight="@dimen/text_size_10"
        android:layout_marginTop="@dimen/margen_size_5"
        android:visibility="gone"
        android:fontFamily="sans-serif"
        android:gravity="center|start"
        android:text="@string/txt_dome"
        android:textAllCaps="false"
        android:textColor="@color/black_tp"
        android:textSize="@dimen/text_size_12" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_size_10"
        android:layout_marginRight="@dimen/text_size_10"
        android:layout_marginTop="@dimen/text_size_20"
        android:gravity="center|top"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_size_10"
            android:background="@drawable/box_bg"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/text_size_10"
                android:weightSum="5">


                <EditText
                    android:id="@+id/etCurrentPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/white_edit_bg"
                    android:drawableLeft="@mipmap/password_icon"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/black"
                    android:gravity="center|start"
                    android:hint="@string/txt_current_password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_tp"
                    android:textSize="@dimen/text_size_16" />

                <EditText
                    android:id="@+id/etNewPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/white_edit_bg"
                    android:drawableLeft="@mipmap/password_icon"
                    android:drawablePadding="8dp"
                    android:drawableRight="@mipmap/show_passsword"
                    android:drawableTint="@color/black"
                    android:gravity="center|start"
                    android:hint="@string/txt_new_password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_tp"
                    android:textSize="@dimen/text_size_16" />

                <EditText
                    android:id="@+id/etConfirmPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/white_edit_bg"
                    android:drawableLeft="@mipmap/password_icon"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/black"
                    android:drawableRight="@mipmap/show_passsword"
                    android:gravity="center|start"
                    android:hint="@string/txt_passwordconfirm_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_tp"
                    android:textSize="@dimen/text_size_16" />


            </LinearLayout>


        </FrameLayout>

        <Button

            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/text_size_20"
            android:layout_marginRight="@dimen/text_size_20"
            android:layout_marginTop="-25dp"
            android:background="@drawable/round_button_appcolor"
            android:fontFamily="sans-serif"
            android:text="@string/txt_savechanges"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />


    </LinearLayout>


</LinearLayout>