<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_scrolling">



    <LinearLayout
        android:background="#fff"
        android:id="@+id/fiels_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_layout"
        android:layout_below="@+id/top_layout"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:padding="@dimen/text_size_10"
            android:layout_margin="@dimen/text_size_10"
            android:background="@drawable/fram"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_firstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:theme="@style/TextLabel">

                    <EditText

                        android:id="@+id/et_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/user_icon"
                        android:drawablePadding="@dimen/margen_size_5"
                        android:drawableTint="@color/app_icon_color"
                        android:hint="@string/txt_name_hint"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_tp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/et_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/user_icon"
                        android:drawablePadding="@dimen/margen_size_5"
                        android:drawableTint="@color/app_icon_color"
                        android:hint="@string/txt_lastname_hint"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_tp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/email"
                    android:drawablePadding="@dimen/margen_size_5"
                    android:drawableTint="@color/app_icon_color"
                    android:hint="@string/txt_email_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_tp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_contect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_contectno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/phone"
                    android:drawablePadding="@dimen/margen_size_5"
                    android:drawableTint="@color/app_icon_color"
                    android:hint="@string/txt_contact_no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_tp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/address"
                    android:drawablePadding="@dimen/margen_size_5"
                    android:drawableTint="@color/app_icon_color"
                    android:hint="@string/txt_address_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_tp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/text_size_10"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margen_size_5"
                android:layout_weight="1"
                android:background="@drawable/round_button_appcolor"
                android:fontFamily="sans-serif"
                android:text="@string/txt_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margen_size_5"
                android:layout_weight="1"
                android:background="@drawable/round_button_delete"
                android:fontFamily="sans-serif"
                android:text="@string/txt_delete"
                android:textColor="@color/app_icon_color"
                android:textSize="@dimen/text_size_20" />

        </LinearLayout>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
